app/assets/stylesheets/products.scss
// Place all the styles related to the Products controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/


.products-page-container {
  display: grid;
  grid-template-columns: 200px auto;
  grid-template-rows: auto;
  margin-bottom: 2rem;

  .sidebar {
    grid-column: 1;
    grid-row: 1;
  }

  .products-list {
    grid-column: 2;
    grid-row: 1;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
  
    ul{
      list-style-type: none;
    }
    
    img {
      width: 150px;
      height: 150px;
      border-radius: 5%;
      display: block;
    }
  }
}

li {
  list-style-type: none;
  margin-left: 0;
}

.product-name {
  font-size: 1.2em;
}

.product-price {
  font-weight: bold;
}

.product-page-container {
  display: grid;
  grid-template-columns: 750px auto;
  grid-template-rows: 400px auto;

  .product-image {
    grid-column: 1;
    grid-row: 1;

    img {
      width: 350px;
      height: 350px;
      margin: 10px auto;
      display: block;
      border-radius: 2%;
    }
  }

  .product-details {
    grid-column: 2;
    grid-row: 1;

    #product-name {
      text-align: left;
      margin-left: 0;
      margin-bottom: 1rem;
    }

    ul {
      list-style-type: none;
      padding: 0;
    }
  }

  .product-reviews {
    display: flex;
  }
}

#reviews{
  margin-left: 10rem;
}

.review {
  display: flex;
  margin-left: 10rem;

  .single-review {
    margin-top: 2rem;
    margin-right: 5rem;
    margin-bottom: 2rem;
  }
}

#add-review {
  margin-left: 10rem;
}

.cart-item {
  display: grid;
  grid-template-columns: 200px auto 200px;

  .cart-item-image {
    grid-column: 1;

    img {
      width: 100px;
      height: 100px;
      border-radius: 5%;
      display: block;
      margin: 2% auto;
    }
  }

  .cart-item-info {
    grid-column: 2;
  }

  .cart-item-edit {
    grid-column: 3;
  }
}

.new-form {
  margin: 100px 100px 100px 100px;
}

label {
  text-align: center;
}

.form-check {
  position: relative;
    display: flex;
    flex-direction: column;
    padding-left: 1.25rem;
}

input {
  color: white;
}

